<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/jobDone"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/thank_you_for_provider"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="@dimen/_11ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:text="Enter Extra Amount Below"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/alertJobPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:hint="@string/enterAmount"
        android:inputType="number"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="0" />

    <TextView
        android:id="@+id/alertcompleteJobDoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/_40sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_40sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/completeJob"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />
</LinearLayout>