<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    tools:context=".view.fragments.customersettingsflowfragments.AddAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/genderRadioGrpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/mrRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:buttonTint="@color/quantum_googgreen"
                android:text="@string/mr" />

            <RadioButton
                android:id="@+id/missRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:buttonTint="@color/quantum_googgreen"
                android:text="@string/miss" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_house_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/houseAndStreet"
                android:inputType="text"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_locality_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_add_location_"
                android:hint="@string/locality"
                android:inputType="text"
                android:paddingEnd="@dimen/_5sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_pincode_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Pincode"
                android:inputType="number"
                android:maxLength="6"
                android:paddingEnd="@dimen/_5sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/nickname_for_address"
            android:textSize="@dimen/_16ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/homeTypeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/green_curved_border"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/home_"
                android:textAlignment="center"
                android:textColor="@color/quantum_googgreen"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/officeTypeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/green_curved_border"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/office"
                android:textAlignment="center"
                android:textColor="@color/quantum_googgreen"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/otherTypeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/green_curved_border"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/other"
                android:textAlignment="center"
                android:textColor="@color/quantum_googgreen"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/locationNote_textView"
            android:layout_width="match_parent"
            android:textSize="@dimen/_9ssp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:textColor="@color/quantum_googred"
            tools:text="Note : we are currently serving only visakhapatnam"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/saveAddressBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/save_address"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>