<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/onBoardingSliderImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_225sdp"
        android:padding="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/onBoardingHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="-12dp"
        android:paddingTop="@dimen/_25sdp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:id="@+id/onBoardingDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/lorem_ipsum_medium_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:id="@+id/onBoardingGetStartedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="50dp"
        android:paddingTop="12dp"
        android:paddingRight="50dp"
        android:paddingBottom="12dp"
        android:text="@string/get_started"
        android:textColor="#fff"
        android:textSize="22sp"
        android:visibility="gone" />

</LinearLayout>